[gd_scene load_steps=4 format=3 uid="uid://dhv5wq4lf1ren"]

[ext_resource type="Script" path="res://ui/reward_panel/item_pack_viewer.gd" id="1_2foje"]
[ext_resource type="PackedScene" uid="uid://ba6rrbnc23vi1" path="res://ui/widgets/item_viewer.tscn" id="1_83qnh"]
[ext_resource type="LabelSettings" uid="uid://bpr6t2q1y56ln" path="res://ui/themes/label_settings/info_label_settings.tres" id="2_4ox40"]

[node name="ItemPackViewer" type="Control"]
custom_minimum_size = Vector2(118, 118)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2foje")

[node name="ItemViewer" parent="." instance=ExtResource("1_83qnh")]

[node name="CountLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 120.0
offset_bottom = 120.0
text = "x10"
label_settings = ExtResource("2_4ox40")
horizontal_alignment = 2
vertical_alignment = 2
